tests/negative_tests/semantic_errors/division_by_zero.c
// This might pass compilation but is semantically questionable
int main() {
    int x;
    x = 5 / 0;  // WARNING: division by zero
    return x;
}
